updated linkedin links on html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 src="./assets/linkedin.png" 
                 alt="My LinkedIn profile"
                 class="icon" 
-                onclick="location.href='https://linkedin.com/'"
+                onclick="location.href='https://linkedin.com/in/chidiebere-oduikolo-2b635a326'"
                 />
                 <img 
                 src="./assets/github.png" 
@@ -354,7 +354,7 @@
                 src="./assets/linkedin.png" 
                 alt="LinkedIn icon" 
                 class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/profile">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/chidiebere-oduikolo-2b635a326">LinkedIn</a></p>
             </div>
         </div>
     </section>
