--- a/index.html
+++ b/index.html
@@ -291,20 +291,20 @@
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/Quiz Time.png" 
+                    src="./assets/Calculator.png" 
                     alt="project 3" 
                     class="project-img">
                 </div>
                 <h2 class="experience-sub-title project-title">Project Three</h2>
-                <p class="section__text__p3">This is a Python Project.</p>
+                <p class="section__text__p3">Basic HTML, CSS and JavaScript were used to achieve this project.</p>
                 <div class="btn-container">
                     <button 
                         class="btn btn-color-2 project-btn" 
-                        onclick="location.href='https://github.com/Chaiddo/Python-Quiz'">Github
+                        onclick="location.href='https://github.com/Chaiddo/Calculator-Project'">Github
                     </button>
                     <button 
                         class="btn btn-color-2 project-btn"
-                        onclick="location.href='https://github.com/Chaiddo/Python-Quiz'">Live Demo
+                        onclick="location.href='https://chaiddo.github.io/Calculator-Project/'">Live Demo
                     </button>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                     class="project-img">
                 </div>
                 <h2 class="experience-sub-title project-title">Project Four</h2>
-                <p class="section__text__p3">Basic HTML, CSS and JavaScript were used to achieve this project.</p>
+                <p class="section__text__p3">This is a Python project.</p>
                 <div class="btn-container">
                     <button 
                         class="btn btn-color-2 project-btn" 
